Fix dependency errors

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
 
     <repositories>
         <repository>
+            <id>paper</id>
+            <url>https://destroystokyo.com/repo/repository/maven-public/</url>
+        </repository>
+        <repository>
             <id>dmulloy2</id>
             <url>http://repo.dmulloy2.net/content/groups/public/</url>
         </repository>
