--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,11 @@
             <version>4.4.0-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
