Whatever I just want to publish this

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,9 @@ jobs:
           files: ./build/libs/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish artifact
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew publish
       - name: Remove jars before caching
         run: rm ./build/libs/*.jar
